<resources>
    <string name="app_name">FOOD PANDA</string>
    <string name="need_location">We need your location!</string>
    <string name="get_location">Get the location</string>
    <string name="eat_food">What do you want to eat ?</string>
    <string name="trending">Trending this week</string>
    <string name="view_all">View all ></string>
    <string name="categories">Categories</string>
    <string name="Enteremail">Enter email or username </string>
    <string name="Password">Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="confirm">Confirm password</string>
    <string name="signup">Sign Up</string>
    <string name="ResetInformation">Information and Contact</string>
    <string name="ResetPass">Update Password</string>
    <string name="ResetLanguage">Change Language</string>
    <string name="ResetAddress">Delivery Address</string>
    <string name="LogOut">Log Out</string>
    <string name="phone">Phone :</string>
    <string name="email">Email :</string>
    <string name="address">Address :</string>
    <string name="savePass">Save Password</string>
    <string name="currentPass">Current Password </string>
    <string name="Newpass">New Password </string>
    <string name="newconfirm">Confirm New Password</string>
    <string name="successPass">Updated Successfully</string>
    <string name="updateInformation">Update Information</string>
    <string name="Name">First And Last Name</string>
    <string name="myPhone">Confirm New Password</string>
    <string name="username">UserName</string>
    <string name="birthday">Birthday</string>
    <string name="job">Job</string>
    <string name="language">LANGAUGE</string>
    <string name="english">English</string>
    <string name="vietnam">Việt Nam</string>
    <string name="done">Done</string>
    <string name="cannel">Cannel</string>
    <string name="gender">gender</string>
    <string name="discount">Discount</string>
    <string name="totalPrice">Total Price</string>
    <string name="total">Total :</string>
    <string name="addtoCard">Add to Card</string>
    <string name="description">Description</string>
    <string name="yourCart">Your cart</string>
</resources>