<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
  android:gravity="center"
    >
    <LinearLayout
        android:background="@color/silver"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="30dp"
            android:text="@string/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:background="@color/silverBackground"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linerEnglish"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="30dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:text="@string/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/imgEnglish"
            android:visibility="invisible"
            android:layout_marginLeft="200dp"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:src="@drawable/checked"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:background="@color/silverBackground"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:id="@+id/linerVietNam"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="30dp"
            android:textSize="15dp"
            android:text="@string/vietnam"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/imgVietNam"
            android:visibility="invisible"
            android:layout_marginLeft="188dp"
            android:gravity="right"
            android:layout_marginRight="20dp"
            android:src="@drawable/checked"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:background="@color/silverBackground"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:background="@color/silverBackground1"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="50dp">
        <LinearLayout
            android:id="@+id/linerBtnCannel"
            android:gravity="center"
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/cannel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:background="@color/silverBackground"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:id="@+id/linerBtnDone"
            android:gravity="center"
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/btnDone"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="15dp"
                android:text="@string/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:background="@color/silverBackground"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
</LinearLayout>