<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/custom_bottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignUpFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:paddingLeft="15dp"
                android:id="@+id/emailSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:textSize="15dp"
                android:hint="@string/Enteremail"
                android:textColorLink="@color/silver"
                android:textCursorDrawable="@color/silver"
                android:textStyle="bold" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/silver"
                app:hintEnabled="false"
                app:hintTextColor="@color/silver"
                app:passwordToggleEnabled="true"
                >
                <EditText
                    android:textSize="15dp"
                    android:background="@color/white"
                    android:id="@+id/passSignUp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textStyle="bold"
                    android:inputType="textPassword"
                    android:layout_marginTop="10dp"
                    android:hint="@string/Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/silver"
                app:hintEnabled="false"
                app:hintTextColor="@color/silver"
                app:passwordToggleEnabled="true"
                >
                <EditText
                    android:textSize="15dp"
                    android:background="@color/white"
                    android:inputType="textPassword"
                    android:id="@+id/confirmSignUp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:hint="@string/confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSignUp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/signup"
                android:layout_width="match_parent"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:backgroundTint="@color/red"
                android:layout_height="wrap_content"/>
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/facebookSignUp"
                    android:layout_marginRight="40dp"
                    android:src="@drawable/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/googeSignUp"
                    android:src="@drawable/google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</FrameLayout>